🐛 fix(docs): Fix emoji rendering on Firefox (#479)

--- a/docs/_static/bookshelf.css
+++ b/docs/_static/bookshelf.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: TossFace;
-  src: url("fonts/tossface.ttf");
+  src: url("fonts/tossface.otf");
 }
 
 html {
